--- a/nlp.ipynb
+++ b/nlp.ipynb
@@ -45,7 +45,7 @@
    "outputs": [],
    "source": [
     "mongo = \"mongodb://localhost:27017/\"\n",
-    "twitter = \"AAAAAAAAAAAAAAAAAAAAAEy0dgEAAAAABmdX43JXQabHK7JN9DytAkFbQXs%3DVopruHesemfSWbQa3WMU1hORYsikSYFFBUUzLY4ul1heniWCum\"\n",
+    "twitter = \"\"\n",
     "\n",
     "dbclient = pymongo.MongoClient(mongo) # Initiate connection to MongoDB\n",
     "api = tweepy.Client(bearer_token=twitter, wait_on_rate_limit=True, return_type=[dict]) # Initiate tweepy client\n",
